--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,3 +1,7 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+.icon-md {
+    @apply h-4 w-4 cursor-pointer;
+}
